--- a/pag_sobreMim/site.css
+++ b/pag_sobreMim/site.css
@@ -1,10 +1,3 @@
-body{
-	background-color: #F2FFFC;
-	font-family: "Crimson Text";
-	font-size: 120%;
-	line-height: 1.5;
-	}
-
 article{
 	padding-bottom: 30px;
 	border-bottom: 1px solid #ccc;
@@ -25,6 +18,8 @@ aside{
 	background-color: #3C1D3D;
 	color: #F2FFFC;
 	text-align: center;
+	clear:right;
+	box-sizing:border-box;
 	}
 
 		aside a{
@@ -38,23 +33,44 @@ aside{
 			margin-bottom: 25px;
 			}
 
-.citacao{
-	background-color: #D9E5E3;
-	border: 10px solid #C2CCCA;
-	width: 250px;
-	margin: 20px 40px;
-	box-sizing: border-box;
-	}
+		aside,img{
+			float: right;
+			width: 15%;
+		}
 
+body{
+	background-color: #F2FFFC;
+	font-family: "Crimson Text";
+	font-size: 120%;
+	line-height: 1.5;
+	}
+		
+			
 blockquote,aside,footer{
 	padding: 16px;
-	}
-
-
-.rodape{
-	background-color: #000000;
-	color: #F2FFFC;
-	}
+}
+			.fiat{
+				background-color: #D9E5E3;
+				border: 10px solid #C2CCCA;
+				width: 250px;
+				margin: 20px 40px;
+				box-sizing: border-box;
+				float: right;
+			}
+		
+			.petrobras{
+				background-color: #D9E5E3;
+				border: 10px solid #C2CCCA;
+				width: 250px;
+				margin: 20px 40px;
+				box-sizing: border-box;
+				float: left;
+			}
+			
+			
+footer{
+	clear: both; /* é conhecido como a classe clearifx*/
+}
 
 
 .icones-sociais l1{
@@ -66,19 +82,44 @@ blockquote,aside,footer{
 			display:inline-block;
 			text-indent: -9999px;
 		}
-			.github{
-				background-image: url(github.png);
-			}
+		.github{
+			background-image: url(github.png);
+		}
 
-			.twitter{
-				background-image: url(twitter.png);
-			}
+		.twitter{
+			background-image: url(twitter.png);
+		}
 
-			.linkedin{
-				background-image: url(linkedin.png);
-			}
+		.linkedin{
+			background-image: url(linkedin.png);
+		}
 
+main{
+	float: left;
+	width: 85%;
+}
+		
+	main a{
+		color: #851944;
+		}
+	
+	main div{
+		width: 720px;
+		margin: auto;
+			/*As margens a seguir, combinadas, causam o mesmo efeito da margem logo acima.
+			margin-left: auto; margin-right: auto;
+			É bem comum, também, encontrarmos uma declaração como margin: 0 auto. 
+			Neste caso, estamos definindo valores diferentes para as margens: zero para as margens superior e inferior e auto para as margens laterais. 
+			De qualquer forma, temos o mesmo efeito: centralizar o elemento.
+			*/
+		padding: 30px;
+	}
 
+.rodape{
+	background-color: #000000;
+	color: #F2FFFC;
+	}
+	
 
 #rodape-pagina{
 		background-color: #000;
@@ -113,6 +154,7 @@ em{
 h2{
 	font-size:30px;
 	font-family: "Open Sans Condensed", sans-serif;
+	clear: both;
 	}
 
 h3{
@@ -130,23 +172,7 @@ strong{
     font-weight: bold;
 }
 
-
-main a{
-	color: #851944;
-	}
-
-main div{
-	width: 720px;
-	margin: auto;
-		/*As margens a seguir, combinadas, causam o mesmo efeito da margem logo acima.
-		margin-left: auto; margin-right: auto;
-		É bem comum, também, encontrarmos uma declaração como margin: 0 auto. 
-		Neste caso, estamos definindo valores diferentes para as margens: zero para as margens superior e inferior e auto para as margens laterais. 
-		De qualquer forma, temos o mesmo efeito: centralizar o elemento.
-		*/
-	padding: 30px;
-}
-
 nav a{
 	color: #F2FFFC;
+	text-transform: lowercase;
 	}
